Add final styling

--- a/_patterns/cards/products.html
+++ b/_patterns/cards/products.html
@@ -1,6 +1,8 @@
 <div class="product-card">
-  <img class="img-flex" src="/images/polkadot-50.jpg" alt="">
-  <h2>Products</h2>
-  <p>All made locally in Ottawa</p>
+  <div class="embed embed-1by1 push">
+    <img class="embed-item" src="/images/logo-32.svg" alt="">
+  </div>
+  <h3 class="push-0">Products</h3>
+  <p class="push-1-2">All made locally in Ottawa</p>
   {% pattern buttons/ghost %}
 </div>
