--- a/_patterns/nav/nav.html
+++ b/_patterns/nav/nav.html
@@ -5,16 +5,16 @@
     <nav class="nav unit xs-1 s-1 m-2-3 l-3-4">
       <ul class="nav-ul push-0">
         <li class="island-1-8">
-          <a class="nav-btn block link-box text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Paintings</a>
+          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Paintings</a>
         </li>
         <li class="island-1-8">
-          <a class="nav-btn block link-box text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Prints</a>
+          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Prints</a>
         </li>
         <li class="island-1-8">
-          <a class="nav-btn block link-box text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Cards</a>
+          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Cards</a>
         </li>
         <li class="island-1-8">
-          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">
+          <a class="block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">
             <i class="icon i-32"><svg><use xlink:href="/images/icons.svg#basket"></use></svg></i>
           </a>
         </li>
