--- a/_patterns/banners/sectional-banner.html
+++ b/_patterns/banners/sectional-banner.html
@@ -2,11 +2,11 @@
   <div class="sec-img unit xs-1">
     <img class="img-flex " src="/images/section-example.jpg" alt="">
   </div>
-  <div class="sec-content text-center unit pin-rc xs-1-2 island">
+  <div class="sec-content text-center unit xs-1 s-1 m-1-2 island">
     <h2 class="text-left push-0">Brand new mugs starting at 20% off!</h2>
-    <p class="text-left push-1-2"> Get them now, deal only lasts till February 12th</p>
+    <p class="text-left push"> Get them now, deal only lasts till February 12th</p>
     <div class="text-left">
-        {% pattern buttons/basic %}
+      {% pattern buttons/basic %}
     </div>
   </div>
 </div>
