--- a/_patterns/forms/search.html
+++ b/_patterns/forms/search.html
@@ -1,6 +1,6 @@
-<div class="search-main">
-  <form class="search-form" action="index.html" method="post">
-    <input type="search" name="search" placeholder="Your search begins here…" class="search-field w-1-2 ib milli">
+<div class="search-main grid">
+  <input type="search" name="search" placeholder="Your search begins here…" class="search-field ib milli unit xs-1 s-1 m-3-4 push-1-2 push-r-1-4">
+  <div class="unit xs-1 s-1 m-1-4 text-left">
     {% pattern buttons/submit %}
-  </form>
+  </div>
 </div>
