new content added

--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -1,22 +1,13 @@
-<header class="relative">
-  <h1 class="pad-b-1-2 push-0 text-left">
-    <i class="icon i-64">
-      <svg><use xlink:href="../../images/icons.svg#logo"/></svg>
+<div class="header">
+  <a class="home">
+    <i class="icon i-96">
+    <img itemprop="image" class="push-0" src="/images/logo.svg" alt="logo image">
     </i>
-  </h1>
-  <div class="header">
-    <input type="checkbox" class="nav-check" id="nav-check">
-    <label class="hide-custom-input nav-label" for="nav-check">
-      <i class="nav-open icon i-64">
-        <svg><use xlink:href="../../images/icons.svg#hamburger"/></svg>
-      </i>
-    </label>
-    <nav class="nav push-0">
-    <ul class="list-group push-0">
-      <li><a class="ib gutter-2" href="../../pages/home.html">Home</a></li>
-      <li><a class="ib gutter-2" href="../../pages/Genre.html">Genre</a></li>
-      <li><a class="ib gutter-2" href="../../pages/checkout.html">Favourites</a></li>
-      <li><a class="ib gutter-2" href="../../pages/checkout.html">Bookmark</a></li>
-    </ul>
-  </nav>
+  </a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Genre</a>
+    <a href="#about">Favourites</a>
+    <a href="#about">Bookmark</a>
+  </div>
 </div>
