--- a/_patterns/product-page/genre-page.html
+++ b/_patterns/product-page/genre-page.html
@@ -1,28 +1,33 @@
 <main class="container">
 
-<div class="grid">
-<div class="left-column">
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-    <div class="embed embed-3by2">
-    <img class="embed-item" src="/images/placeholder.jpg" alt="">
+  <div class="grid grid-middle">
+    <div class="wrapper unit xs-1 s-1 m-1-2 l-1-3"
+  <div class="embed embed-item img-flex">
+    <img class="embed-3by2" src="/images/placeholder.jpg" alt="">
   </div>
+</div>
 
-
+  <div class="grid grid-middle">
+  <div class="wrapper unit xs-1 s-1 m-1 l-1-2">
   <div class="right-column">
+
     <div class="product-description">
-      <span>Genre: Shenmo</span>
-      <h1 class="bold"> Title: Journey to the west</h1>
+      <span>Genre : Shenmo</span>
+      <h1 class="title"> Title: Journey to the west</h1>
       <p>By: We Cheng’en</p>
     </div>
 
-      <div class="unit [ xs-1 s-1-2 m-1-2 l-1-3 ]">
-    <div class="product-price">
-      <a href="#" class="btn">Read book</a>
+    <div class="product-configuration">
+
+      <div class="cable-config">
+        <span class="pad-b-2">Options</span>
+
+        <div class="cable-choose">
+          <button class="btn">Read Book</button>
+          <button class="btn gutter-1-2">Download</button>
+        </div>
+      </div>
     </div>
-    <div class="product-price">
-      <a href="#" class="btn">Download</a>
-    </div>
   </div>
-  </div>
-  </div>
+
 </main>
