--- a/_patterns/forms/checkout-form.html
+++ b/_patterns/forms/checkout-form.html
@@ -13,8 +13,8 @@
   <form class="max-length island form-style-1 container" action="#" method="post" novalidate>
 
     <div class="error-message error-message-highlighted push" role="alert" aria-live="assertive">
-      <h3 class="push-0">
-        <i class="icon i-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+      <h3 class="push-0 island text-center">
+        <!-- <i class="icon i-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
         <span class="icon-label">There are items that require your attention.</span>
       </h3>
     </div>
@@ -55,8 +55,8 @@
     <div class="push-1-2">
       <label for="cardholder">Cardholder Name</label>
       <input id="cardholder" required aria-describedby="name-error">
-      <p class="error-message milli island-1-4 push-0" id="name-error">
-        <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+      <p class="error-message milli island-1-2 text-center push-0" id="name-error">
+        <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
         <span class="icon-label">Please provide cardholder name</span>
       </p>
     </div>
@@ -64,8 +64,8 @@
     <div class="push-1-2">
       <label for="cardnumber">Card Number</label>
       <input type="cardnumber" id="cardnumber" required aria-describedby="card-error">
-      <p class="error-message milli island-1-4 push-0" id="card-error">
-        <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+      <p class="error-message milli island-1-2 text-center push-0" id="card-error">
+        <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
         <span class="icon-label">Please provide credit card number with no spaces</span>
       </p>
     </div>
@@ -77,18 +77,18 @@
       <div class="push-1-2">
         <label for="month-expiration">Month</label>
         <input type="month-expiration" id="month-expiration" required aria-describedby="expiration-error">
-        <p class="error-message milli push-0" id="expiration-error">
-          <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-          <span class="icon-label">MM</span>
+        <p class="error-message milli island-1-2 text-center push-0" id="expiration-error">
+          <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
+          <span class="icon-label">Please entire the month your card expires.</span>
         </p>
       </div>
 
       <div class="push-1-2">
         <label for="expiration-year">Year</label>
         <input type="expiration-year" id="expiration-year" required aria-describedby="expiration-error">
-        <p class="error-message milli push-0" id="expiration-error">
-          <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-          <span class="icon-label">YY</span>
+        <p class="error-message milli island-1-2 text-center push-0" id="expiration-error">
+          <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
+          <span class="icon-label">Please entire the year your card expires.</span>
         </p>
       </div>
     </div>
@@ -96,9 +96,9 @@
     <div class="push-1-2">
       <label for="cvc">CVC</label>
       <input type="cvc" id="cvc" required aria-describedby="cvc-error">
-      <p class="error-message milli push-0" id="cvc-error">
-        <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-        <span class="icon-label">CVC</span>
+      <p class="error-message milli island-1-2 text-center push-0" id="cvc-error">
+        <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
+        <span class="icon-label">The CVC is located on the back of your card.</span>
       </p>
       <a class="block" href="#">What is this?</a>
     </div>
