Add small modifications to sign up form

--- a/_patterns/forms/signup-form.html
+++ b/_patterns/forms/signup-form.html
@@ -48,8 +48,8 @@
 
     <div class="push-1-2">
       <label for="password2">Re-enter Password</label>
-      <input type="password2" id="password2" required aria-describedby="password-error">
-      <p class="error-message milli island-1-2 text-center push-0" id="password-error">
+      <input type="password2" id="password2" required aria-describedby="password-error2">
+      <p class="error-message milli island-1-2 text-center push-0" id="password-error2">
         <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
         <span class="icon-label">Please provide a properly formatted password</span>
       </p>
