Add all the things

--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,5 +1,5 @@
-<div class="card">
+<div class="card island-1-2">
   <img class="img-flex" src="/images/hoodie-black.svg" alt="">
   <h2>Black Wonderland Hoodie</h2>
-  {% pattern buttons/seemore %}
+  <div class="blackbg">{% pattern buttons/seemore %}</div>
 </div>
