Remove check out form

--- a/_patterns/forms/mailing-list-input.html
+++ b/_patterns/forms/mailing-list-input.html
@@ -1,4 +1,4 @@
-<div class="push-1-2 pad-t-1-2">
+<div>
   <input type="checkbox" id="agree" required aria-describedby="agree-error">
   <label for="agree">Signup for our mailing list</label>
 </div>
