--- a/_patterns/forms/signin-form.html
+++ b/_patterns/forms/signin-form.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="push-1-2">
-    <label for="username">Username</label>
+    <label class="pad-b-1-2" for="username">Username</label>
     <input id="username" required aria-describedby="username-error">
     <p class="error-message milli island-1-2 text-center push-0" id="username-error">
       <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
@@ -17,7 +17,7 @@
   </div>
 
   <div class="push-1-2">
-    <label for="password">Password</label>
+    <label class="pad-b-1-2" for="password">Password</label>
     <input type="password" id="password" required aria-describedby="password-error">
     <p class="error-message milli island-1-2 text-center push-0" id="password-error">
       <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
