--- a/_patterns/forms/email-input.html
+++ b/_patterns/forms/email-input.html
@@ -1,5 +1,5 @@
 <div class="push-1-2">
-  <label for="email">Email</label>
+  <label class="pad-b-1-2" for="email">Email</label>
   <input type="email" id="email" required aria-describedby="email-error">
   <p class="error-message milli island-1-2 text-center push-0" id="email-error">
     <span class="icon-label">Please provide a properly formatted email address</span>
