--- a/_patterns/forms/mailinglist-form.html
+++ b/_patterns/forms/mailinglist-form.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="push-1-2">
-    <label for="email">Enter your email to join our mailing list.</label>
+    <label class="pad-b-1-2" for="email">Enter your email to join our mailing list.</label>
     <input type="email" id="email" required aria-describedby="email-error">
     <p class="error-message milli island-1-2 text-center push-0" id="email-error">
       <!-- <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i> -->
@@ -16,7 +16,7 @@
     </p>
   </div>
 
-  <div class="pad-t-1-2">
+  <div>
     <button class="btn" type="submit">Send</button>
   </div>
 </div>
