--- a/_patterns/forms/product-info.html
+++ b/_patterns/forms/product-info.html
@@ -1,3 +1,3 @@
-<a class="peta" href="#">Product 1</a>
-<h6>Price</h6>
+<a class="tera pad-b-1-2" href="#">Product 1</a>
+<h6 class="push-0 pad-b-1-2">Price</h6>
 <p>$50</p>
