--- a/_patterns/forms/quantity-input.html
+++ b/_patterns/forms/quantity-input.html
@@ -1,6 +1,6 @@
 <div class="push-1-2">
-  <h6>Quantity</h6>
-  <label for="quantity">Between 1 and 5</label>
+  <h6 class="push-0 pad-b-1-2">Quantity</h6>
+  <label class="pad-b-1-2" for="quantity">Between 1 and 5</label>
   <input id="quantity" type="number" name="quantity" min="1" max="5" required>
 </div>
 </div>
