--- a/_patterns/forms/text-input.html
+++ b/_patterns/forms/text-input.html
@@ -1,5 +1,5 @@
 <div class="push-1-2">
-  <label for="cardholder">Enter Text</label>
+  <label class="pad-b-1-2" for="cardholder">Enter Text</label>
   <input id="cardholder" required aria-describedby="name-error">
   <p class="error-message milli island-1-2 text-center push-0" id="name-error">
     <span class="icon-label">Please enter text</span>
