Add all the things

--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,5 +1,6 @@
-<div class="card island-1-2">
-  <img class="img-flex" src="/images/hoodie-black.svg" alt="">
-  <h2>Black Wonderland Hoodie</h2>
+<div class="card pad-t-1 pad-b-1">
+  <img class="img-flex" src="/images/hoodie-black.png" alt="">
+  <h2 class="island-1-2">Black Wonderland Hoodie</h2>
+  <p>$69.99</p>
   <div class="blackbg">{% pattern buttons/seemore %}</div>
 </div>
