--- a/_patterns/forms/search.html
+++ b/_patterns/forms/search.html
@@ -1,6 +1,6 @@
 <div class="search-main grid">
-  <input type="search" name="search" placeholder="Your search begins here…" class="search-field ib milli unit xs-1 s-1 m-3-4 push-1-2 push-r-1-4">
-  <div class="unit xs-1 s-1 m-1-4 text-left">
+  <input type="search" name="search" placeholder="Your search begins here…" class="search-field ib milli push-1-2 push-r-1-4">
+  <div class="ib text-left">
     {% pattern buttons/submit %}
   </div>
 </div>
