Change the background colour of the icons in the pattern library

--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,6 +1,6 @@
-<a class="product island-1-2 link-box" href="#">
+<a class="product island-1-2 link-box" href="#" aria-label="View details on the Catonaut ceramic mug that is $15.99">
   <div class="push-1-2 chop">
-    <img class="img-flex card-img" src="/images/product-example.jpg" alt="">
+    <img class="img-flex card-img" src="/images/product-example.jpg" alt="An image of Catonaut on a cup.">
   </div>
   <div class="card-content grid">
     <div class="unit xs-1-2">
