--- a/_patterns/cards/promo-card.html
+++ b/_patterns/cards/promo-card.html
@@ -1,8 +1,8 @@
-<a class="card box-link promo-card" href="#">
+<a class="card box-link promo-card" href="#" aria-label="View details on the brand new ceramic mugs available now!">
   <div class="embed embed-1by1 chop relative">
-    <img class="img-flex embed-item card-img" src="/images/product-example.jpg" alt="">
+    <img class="img-flex embed-item card-img" src="/images/product-example.jpg" alt="An image of Catonaut on a cup.">
     <div class="promo-title pin-c island">
-      <p class="peta text-center push-0 bold"> Now selling Mugs!</p>
+      <p class="peta text-center push-0 bold">Now selling Mugs!</p>
     </div>
   </div>
 </a>
