Add new description for credit card

--- a/_patterns/forms/creditcardnumber.html
+++ b/_patterns/forms/creditcardnumber.html
@@ -1,5 +1,5 @@
 <div class="push-1-2">
-  <label for="credit-card">Credit Card Info</label>
+  <label for="credit-card">Credit Card Number</label>
   <input type="credit-card" id="credit-card" required aria-describedby="credit-card">
   <p class="error-message milli island-1-4 push-0" id="credit-card">
     <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
