Add rationales for all of the patterns

--- a/_patterns/buttons/icon-search.html
+++ b/_patterns/buttons/icon-search.html
@@ -1,4 +1,4 @@
-<a class="btn search-btn relative" href="#">
+<a class="btn search-btn relative ic-search-btn" href="#">
   <i class="icon i-24 pin-c">
     <svg>
       <use xlink:href="/images/icons.svg#search"></use>
