--- a/_patterns/forms/alt-search.html
+++ b/_patterns/forms/alt-search.html
@@ -1,6 +1,6 @@
-<div class="alt-search grid wrapper">
+<div class="alt-search grid max-length text-center">
   <input type="search" name="search" placeholder="search for stuff here…" class="search-field ib milli unit xs-1 s-1 m-3-4 push-1-2 push-r-1-4">
-  <div class="unit xs-1-2 s-1-2 m-1-4">
+  <div class="unit xs-1-2 s-1-2 m-1-4 text-left">
     {% pattern buttons/icon-search %}
   </div>
 </div>
