Change footer type to smaller

--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -30,8 +30,8 @@
       </menu>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center">
-      <p class="push-0 milli">Privacy Statement</p>
-      <p class="push-0 milli">Terms and Conditions</p>
+      <p class="push-0 nano">Privacy Statement</p>
+      <p class="push-0 nano">Terms and Conditions</p>
     </div>
     <div class="unit xs-1 s-1 m-1 l-1 text-center island">
       <small class="mega">MiriamPionDesign2019</small>
