--- a/_patterns/cards/product-info.html
+++ b/_patterns/cards/product-info.html
@@ -7,7 +7,7 @@
   <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-1-2">
     <h3 class="push-0">Ink Card</h3>
     <p class="violet-text">$10.00</p>
-    <ul>
+    <ul class="list-group">
       <li class="push-0">Beautiful illustrated card</li>
       <li class="push-0">100 lbs paper card stock</li>
       <li class="push-1-2">Linocut illustration, envelope included</li>
