Add header and footer files

--- a/_patterns/sections/checkout-text.html
+++ b/_patterns/sections/checkout-text.html
@@ -1,5 +1,5 @@
-<h2>Checkout</h2>
-<h3>A Creature</h3>
+<h2 class="pad-b-1-2 push-0">Checkout</h2>
+<h4>A Creature</h4>
 
 <img class="img-flex max-length" src="/images/griffin.png" alt="">
 
