--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -3,16 +3,16 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center">
       <ul class="list-group">
         <li>
-          <a class="footer-btn" href="#">About</a>
+          <a class="giga footer-btn" href="#">About</a>
         </li>
         <li>
-          <a class="footer-btn" href="#">Prints</a>
+          <a class="giga footer-btn" href="#">Prints</a>
         </li>
         <li>
-          <a class="footer-btn" href="#">Cards</a>
+          <a class="giga footer-btn" href="#">Cards</a>
         </li>
         <li>
-          <a class="footer-btn" href="#">Paintings</a>
+          <a class="giga footer-btn" href="#">Paintings</a>
         </li>
       </ul>
     </div>
