Add CSS to search bar

--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -6,7 +6,7 @@
   <div class="search-container">
     <form action="">
       <input type="text" placeholder="Search" name="search">
-      <button type="submit">Submit</button>
+      <button type="submit">submit</button>
     </form>
   </div>
 </div>
