--- a/_patterns/forms/search.html
+++ b/_patterns/forms/search.html
@@ -1,4 +1,4 @@
-<div class="search-main grid grid-middle">
+<div class="search-main">
   <input type="search" name="search" placeholder="Your search begins here…" class="search-field ib milli push-1-2 push-r-1-4">
   <div class="ib text-left push-1-2">
     {% pattern buttons/submit %}
