--- a/_patterns/sectional/sectional-banner.html
+++ b/_patterns/sectional/sectional-banner.html
@@ -1,11 +1,11 @@
 <div class="sec-banner relative grid">
   <div class="sec-img unit xs-1">
-    <img class="img-flex " src="/images/section-example.jpg" alt="">
+    <img class="img-flex" src="/images/section-example.jpg" alt="">
   </div>
   <div class="sec-content text-center unit xs-1 s-1 m-1-2 island">
     <h2 class="text-left push-0">Brand new mugs starting at 20% off!</h2>
     <p class="text-left push"> Get them now, deal only lasts till February 12th</p>
-    <div class="text-left">
+    <div class="text-left" aria-label="click to view products on the brand new wonderful ceramic mugs!">
       {% pattern buttons/basic %}
     </div>
   </div>
