--- a/_patterns/secondary-nav/carousel.html
+++ b/_patterns/secondary-nav/carousel.html
@@ -1,37 +1,37 @@
   <section class="max-length">
     <div class="carousel">
-      <input class="carousel-input" type="radio" name="mammals" id="arsinoitherium-control" checked>
-      <input class="carousel-input" type="radio" name="mammals" id="elasmotherium-control">
-      <input class="carousel-input" type="radio" name="mammals" id="glyptodon-control">
-      <input class="carousel-input" type="radio" name="mammals" id="megatherium-control">
+      <input class="carousel-input" type="radio" name="artwork" id="artwork-1-control" checked>
+      <input class="carousel-input" type="radio" name="artwork" id="artwork-2-control">
+      <input class="carousel-input" type="radio" name="artwork" id="artwork-3-control">
+      <input class="carousel-input" type="radio" name="artwork" id="artwork-4-control">
 
       <div class="carousel-inner relative">
         <div class="carousel-items">
-          <div class="carousel-item embed embed-golden" id="arsinoitherium">
-            <img class="embed-item" src="images/arsinoitherium.jpg" alt="">
+          <div class="carousel-item embed embed-golden" id="artwork-1">
+            <img class="embed-item" src="images/artwork-1.jpg" alt="">
           </div>
-          <div class="carousel-item embed embed-golden" id="elasmotherium">
-            <img class="embed-item" src="images/elasmotherium.jpg" alt="">
+          <div class="carousel-item embed embed-golden" id="artwork-2">
+            <img class="embed-item" src="images/artwork-2.jpg" alt="">
           </div>
-          <div class="carousel-item embed embed-golden" id="glyptodon">
-            <img class="embed-item" src="images/glyptodon.jpg" alt="">
+          <div class="carousel-item embed embed-golden" id="artwork-3">
+            <img class="embed-item" src="images/artwork-3.jpg" alt="">
           </div>
-          <div class="carousel-item embed embed-golden" id="megatherium">
-            <img class="embed-item" src="images/megatherium.jpg" alt="">
+          <div class="carousel-item embed embed-golden" id="artwork-4">
+            <img class="embed-item" src="images/artwork-4.jpg" alt="">
           </div>
         </div>
         <ul class="carousel-controls list-group-inline pin-cb w-1 text-center push-0 island-1-2">
           <li>
-            <label class="carousel-btn icon i-18 ir" for="arsinoitherium-control">Arsinoitherium</label>
+            <label class="carousel-btn icon i-18 ir" for="artwork-1-control">artwork-1</label>
           </li>
           <li>
-            <label class="carousel-btn icon i-18 ir" for="elasmotherium-control">Elasmotherium</label>
+            <label class="carousel-btn icon i-18 ir" for="artwork-2-control">artwork-2</label>
           </li>
           <li>
-            <label class="carousel-btn icon i-18 ir" for="glyptodon-control">Glyptodon</label>
+            <label class="carousel-btn icon i-18 ir" for="artwork-3-control">artwork-3</label>
           </li>
           <li>
-            <label class="carousel-btn icon i-18 ir" for="megatherium-control">Megatherium</label>
+            <label class="carousel-btn icon i-18 ir" for="artwork-4-control">artwork-4</label>
           </li>
         </ul>
       </div>
