--- a/_patterns/secondary-nav/carousel.html
+++ b/_patterns/secondary-nav/carousel.html
@@ -8,16 +8,16 @@
       <div class="carousel-inner relative">
         <div class="carousel-items">
           <div class="carousel-item embed embed-golden" id="artwork-1">
-            <img class="embed-item" src="images/artwork-1.jpg" alt="">
+            <img class="embed-item" src="/images/artwork-1.jpg" alt="">
           </div>
           <div class="carousel-item embed embed-golden" id="artwork-2">
-            <img class="embed-item" src="images/artwork-2.jpg" alt="">
+            <img class="embed-item" src="/images/artwork-2.jpg" alt="">
           </div>
           <div class="carousel-item embed embed-golden" id="artwork-3">
-            <img class="embed-item" src="images/artwork-3.jpg" alt="">
+            <img class="embed-item" src="/images/artwork-3.jpg" alt="">
           </div>
           <div class="carousel-item embed embed-golden" id="artwork-4">
-            <img class="embed-item" src="images/artwork-4.jpg" alt="">
+            <img class="embed-item" src="/images/artwork-4.jpg" alt="">
           </div>
         </div>
         <ul class="carousel-controls list-group-inline pin-cb w-1 text-center push-0 island-1-2">
