Add proper file name

--- a/_patterns/navigation/navigation.html
+++ b/_patterns/navigation/navigation.html
@@ -3,7 +3,7 @@
     <div class="masthead grid grid-middle gutter">
       <div class="left unit xs-1 s-1-2 m-1-2 l-1-2">
         <i class="icon i-192">
-          <a class="logo" href="index.html">
+          <a class="logo" href="navigation.html">
             <img src="images/logo-64.svg" alt="#" aria-details="logo">
           </a>
         </i>
