Add all the things

--- a/_patterns/navigation/navigation.html
+++ b/_patterns/navigation/navigation.html
@@ -4,7 +4,7 @@
       <div class="left unit xs-1 s-1-2 m-1-2 l-1-2">
         <i class="icon i-192">
           <a class="logo" href="">
-            <img src="images/logo-64.svg" alt="#" aria-details="logo">
+            <img src="images/logo.svg" alt="#" aria-details="logo">
           </a>
         </i>
       </div>
