Add different size to logo

--- a/_patterns/navigation/navigation.html
+++ b/_patterns/navigation/navigation.html
@@ -1,20 +1,20 @@
 <section>
   <div>
-    <div class="masthead grid grid-middle gutter">
+    <div class="masthead grid grid-middle gutter line">
       <div class="left unit xs-1 s-1-2 m-1-2 l-1-2">
-        <i class="icon i-64">
-          <a class="logo" href="">
-            <img src="images/logo.svg" alt="#" aria-details="logo">
+        <i class="icon i-192">
+          <a class="logo" href="index.html">
+            <img src="/images/logo.svg" alt="#" aria-details="logo">
           </a>
         </i>
       </div>
       <div class="nav unit text-center xs-1 s-1-2 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <nav role="navigation" id="nav" tabindex="0">
           <ul class="list-group-inline mega push-0">
-            <li><a class="ib gutter-1-4" href="index.html"><span>Home</span></a></li>
-            <li><a class="ib gutter-1-4" href="product.html"><span>Shop</span></a></li>
-            <li><a class="ib gutter-1-4" href=""><span>Cart</span></a></li>
-            <li><a class="ib gutter-1-4" href=""><span>Account</span></a></li>
+            <li><a class="ib gutter-1-4 bold" href="index.html"><span>Home</span></a></li>
+            <li><a class="ib gutter-1-4 bold" href="product.html"><span>Shop</span></a></li>
+            <li><a class="ib gutter-1-4 bold" href=""><span>Cart</span></a></li>
+            <li><a class="ib gutter-1-4 bold" href=""><span>Account</span></a></li>
           </ul>
         </nav>
       </div>
