--- a/_patterns/navigation/navigation.html
+++ b/_patterns/navigation/navigation.html
@@ -2,11 +2,11 @@
   <div>
     <div class="masthead grid grid-middle gutter line">
       <div class="left unit xs-1 s-1-2 m-1-2 l-1-2">
-        <i class="icon i-192">
+        <div>
           <a class="logo" href="index.html">
             <img src="/images/logo.svg" alt="#" aria-details="logo">
           </a>
-        </i>
+        </div>
       </div>
       <div class="nav unit text-center xs-1 s-1-2 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <nav role="navigation" id="nav" tabindex="0">
