--- a/_patterns/navigation/navigation.html
+++ b/_patterns/navigation/navigation.html
@@ -1,18 +1,18 @@
 <section>
   <div>
     <div class="masthead grid grid-middle line">
-      <div class="left unit xs-1 s-1-2 m-1-2 l-1-2">
+      <div class="left unit xs-1-2 s-1-2 m-1-2 l-1-2">
         <div>
           <a class="logo" href="index.html">
             <img src="/images/logo.svg" alt="#" aria-details="logo">
           </a>
         </div>
       </div>
-      <div class="nav unit xs-1 s-1-2 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
+      <div class="nav unit xs-1-2 s-1-2 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <nav class="right" role="navigation" id="nav" tabindex="0">
           <ul class="list-group-inline mega push-0">
-            <li><a class="island-1-2">
-              <i class="icon i-32 cart-icon"><svg><use xlink:href="/images/icons.svg#cart"></use></svg></i>
+            <li><a class="island-1-2" href="index.html">
+              <i class="ib gutter-1-4 icon i-32 cart-icon"><svg><use xlink:href="/images/icons.svg#cart"></use></svg></i>
             </a></li>
             <li><a class="ib gutter-1-4 bold" href="index.html"><span>Home</span></a></li>
             <li><a class="ib gutter-1-4 bold" href="product.html"><span>Shop</span></a></li>
