Add form fields, and a navigation

--- a/_patterns/cards/view-card.html
+++ b/_patterns/cards/view-card.html
@@ -3,7 +3,7 @@
     <img class="img-flex" src="/images/crystals/{{include.image}}" alt="">
   </div>
   <div class="island-1-2">
-    <h2>{{include.tittle}}</h2>
+    <h2>{{include.title}}</h2>
     {% pattern buttons/wide text=include.button_text%}
   </div>
 </div>
