--- a/_patterns/forms/name.html
+++ b/_patterns/forms/name.html
@@ -1,4 +1,4 @@
-<form class="max-length island" method="post" action="#" novalidate>
+<div class="max-length island" method="post" action="#" novalidate>
   <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
     <h3 class="push-0">
       <i class="icon i-32"><svg><use xlink:href="images/icon.svg#error" /></svg></i>
@@ -23,4 +23,4 @@
       <span class="icon-label">Please provide a last name</span>
     </p>
   </div>
-</form>
+</div>
