--- a/_patterns/forms/search.html
+++ b/_patterns/forms/search.html
@@ -1,3 +1,4 @@
-<div class="search max-length">
-  <input type="text" placeholder="Search..">
+<div class="search max-length input-container">
+  <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#search"></use></svg></i>
+  <input class-"input-feild" type="text" placeholder="Search..">
 </div>
