--- a/_patterns/cards/image.html
+++ b/_patterns/cards/image.html
@@ -1,7 +1,7 @@
 <div class="card chop">
   <img class="img-flex" src="/images/crystals/{{include.image}}" alt="">
   <div class="island-1-2">
-    <h2>{{include.tittle}}</h2>
+    <h2>{{include.title}}</h2>
     <p><i>{{include.details}}</i><br>
       {{include.more-details}}
     </p>
