--- a/_patterns/forms/email.html
+++ b/_patterns/forms/email.html
@@ -1,4 +1,4 @@
-<form class="max-length island" method="post" action="#" novalidate>
+<div class="max-length island" method="post" action="#" novalidate>
   <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
     <h3 class="push-0">
       <i class="icon i-32"><svg><use xlink:href="images/icon.svg#error" /></svg></i>
@@ -14,4 +14,4 @@
     <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
     <span class="icon-label">Please provide a properly formatted email addresst</span>
   </p>
-</form>
+</div>
