--- a/_patterns/forms/password.html
+++ b/_patterns/forms/password.html
@@ -1,4 +1,4 @@
-<form class="max-length island" method="post" action="#" novalidate>
+<div class="max-length island" method="post" action="#" novalidate>
   <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
     <h3 class="push-0">
       <i class="icon i-32"><svg><use xlink:href="images/icon.svg#error" /></svg></i>
@@ -11,7 +11,7 @@
     placeholder="8 characters" name="password" required>
     <p class="error-message milli island-1-4 push-0" id="name-error">
       <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-      <span class="icon-label">Please provide a valid password. *characters long*</span>
+      <span class="icon-label">Please provide a valid password. *8 characters long*</span>
     </p>
   </div>
   <div class="push">
@@ -23,4 +23,4 @@
       <span class="icon-label">Please provide the same password as above</span>
     </p>
   </div>
-</form>
+</div>
