Add all the things to navigation

--- a/_patterns/forms/province.html
+++ b/_patterns/forms/province.html
@@ -1,7 +1,7 @@
 <div class="push-1-2">
   <label for="search">Please select your Province of residence</label>
   <p class="error-message milli island-1-4 push-0" id="search-error">
-    <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
   </p>
   <select id="search" name="search">
     <option value="P.E.I">Prince Edward Island</option>
