--- a/_patterns/forms/creditcardnumber.html
+++ b/_patterns/forms/creditcardnumber.html
@@ -2,7 +2,7 @@
   <label for="credit-card">Credit Card Number</label>
   <input type="credit-card" id="credit-card" required aria-describedby="credit-card">
   <p class="error-message milli island-1-4 push-0" id="credit-card">
-    <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
     <span class="icon-label">Please provide a 16 digit Credit Card number</span>
   </p>
 </div>
@@ -11,7 +11,7 @@
   <label for="expires">Expiry Date</label>
   <input type="expires" id="expires" required aria-describedby="expires">
   <p class="error-message milli island-1-4 push-0" id="expires">
-    <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
     <span class="icon-label">Please provide your Credit Cards expiration date</span>
   </p>
 </div>
@@ -20,7 +20,7 @@
   <label for="code">Securtiy Code</label>
   <input type="code" id="code" required aria-describedby="code">
   <p class="error-message milli island-1-4 push-0" id="code">
-    <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
     <span class="icon-label">Please provide your three digit Security Code</span>
   </p>
 </div>
