--- a/_patterns/forms/email.html
+++ b/_patterns/forms/email.html
@@ -2,7 +2,7 @@
   <label for="email">Email Address</label>
   <input type="email" id="email" required aria-describedby="email-error">
   <p class="error-message milli island-1-4 push-0" id="email-error">
-    <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
     <span class="icon-label">Please provide a properly formatted email address</span>
   </p>
 </div>
@@ -11,7 +11,7 @@
   <label for="email">Confirm Email</label>
   <input type="email" id="email" required aria-describedby="email-error">
   <p class="error-message milli island-1-4 push-0" id="email-error">
-    <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
     <span class="icon-label">Please verify your email address</span>
   </p>
 </div>
