--- a/_patterns/forms/name.html
+++ b/_patterns/forms/name.html
@@ -2,7 +2,7 @@
   <label for="name">Full Name</label>
   <input id="name" required aria-describedby="name-error">
   <p class="error-message milli island-1-4 push-0" id="name-error">
-    <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
     <span class="icon-label">Please provide your full name</span>
   </p>
 </div>
