--- a/_patterns/forms/receive-news.html
+++ b/_patterns/forms/receive-news.html
@@ -2,7 +2,7 @@
       <input type="checkbox" id="agree" aria-describedby="agree-error">
       <label for="agree">I’d like to receive emails from Archaic Records</label>
       <p class="error-message milli island-1-4 push-0" id="agree-error">
-        <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+        <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
         <span class="icon-label">Yes, I'd like to receive email updates from Archaic Records!</span>
       </p>
     </div>
