--- a/_patterns/forms/street-address.html
+++ b/_patterns/forms/street-address.html
@@ -2,7 +2,7 @@
     <label for="address">Street Address</label>
     <input type="address" id="address" required aria-describedby="address-error">
     <p class="error-message milli island-1-4 push-0" id="address-error">
-      <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+      <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#error" /></svg></i>
       <span class="icon-label">Provide your valid home address</span>
     </p>
   </div>
