--- a/_patterns/forms/terms.html
+++ b/_patterns/forms/terms.html
@@ -2,7 +2,7 @@
       <input type="checkbox" id="agree" required aria-describedby="agree-error">
       <label for="agree">I agree to the Terms and Conditions</label>
       <p class="error-message milli island-1-4 push-0" id="agree-error">
-        <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+        <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
         <span class="icon-label">Please agree to our terms and conditions</span>
       </p>
     </div>
