--- a/_patterns/forms/unit-number.html
+++ b/_patterns/forms/unit-number.html
@@ -2,7 +2,7 @@
     <label for="text">Apartment/Unit</label>
     <input type="text" id="text" aria-describedby="unit-error">
     <p class="error-message milli island-1-4 push-0" id="unit-error">
-      <i class="icon i-16"><svg><use xlink:href="images/icons.svg#warning" /></svg></i>
+      <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#warning" /></svg></i>
       <span class="icon-label">Please provide a Unit/Apartment number</span>
     </p>
   </div>
