--- a/_patterns/navigation/navigation.html
+++ b/_patterns/navigation/navigation.html
@@ -1,7 +1,7 @@
 <section>
   <div>
-    <div class="masthead grid grid-middle line">
-      <div class="left unit xs-1 s-1-2 m-1-2 l-1-2">
+    <div class="masthead grid grid-middle line push-0">
+      <div class="left unit xs-1-2 s-1-2 m-1-2 l-1-2">
         <div>
           <a class="logo" href="index.html">
             <img src="/images/logo.svg" alt="#" aria-details="logo">
