Fix header and footer

--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -1,24 +1,38 @@
-<div class="topnav">
-  <a href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#about">Products</a>
-  <a href="#contact">Contact</a>
-  <div class="search-container">
-    <form action="">
-      <input type="text" placeholder="Search" name="search">
-      <button type="submit">submit</button>
-    </form>
+<div class="all grid">
+
+  <div class="unit xs-1">
+    <nav class="topnav island-1-4">
+      <ul class="push-0">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Contact</a></li>
+
+        <div class="search-container">
+          <form class="search-form">
+            <input type="text" name="search">
+            <button class="milli" type="submit">search</button>
+          </form>
+        </div>
+      </ul>
+    </nav>
   </div>
-</div>
 
-<div class="nav">
 
-</div>
 
-<div class="breadcrumb">
+  <div class="breadcrumb-div unit xs-1">
+    <ul class="breadcrumb push-0 island-1-4 text-center">
+      <li><a href="#" class="micro">Home</a></li>
+      <li><a href="#" class="micro">Products</a></li>
+      <li><a href="#" class="micro">Griffins</a></li>
+      <li class="micro">European Griffins</li>
+    </ul>
+  </div>
 
-</div>
-
-<div class="title">
-
+  <div class="unit xs-1">
+    <div class="title grid gutter-2 pad-b">
+      <img class="inline-block unit xs-1 s-1 m-1-4 l-1-4 xl-1-4" src="/images/logo.svg" alt="">
+      <h1 class="unit xs-2-4 push-0 inline-block island-1-2 text-center gutter-2">Mythological Creature Market</h1>
+    </div>
+  </div>
 </div>
