--- a/_patterns/nav/nav.html
+++ b/_patterns/nav/nav.html
@@ -1,20 +1,20 @@
 <header class="masthead grid grid-middle island-1-2">
     <div class="logo unit xs-1 s-1 m-1-3 l-1-4">
-      <h1 class="push-0 gutter-1-4 pad-b-1-4">Flora and Zip</h1>
+      <h1 class="push-0 gutter-1-4 pad-b-1-4"><a href="/">Flora and Zip</a></h1>
     </div>
     <nav class="nav unit xs-1 s-1 m-2-3 l-3-4">
       <ul class="nav-ul push-0">
         <li class="island-1-8">
-          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Paintings</a>
+          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="/products/">Paintings</a>
         </li>
         <li class="island-1-8">
-          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Prints</a>
+          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="/products/">Prints</a>
         </li>
         <li class="island-1-8">
-          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">Cards</a>
+          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="/products/">Cards</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">
+          <a class="block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="/form/">
             <i class="icon i-32"><svg><use xlink:href="/images/icons.svg#basket"></use></svg></i>
           </a>
         </li>
