Remove form from link

--- a/_patterns/nav/nav.html
+++ b/_patterns/nav/nav.html
@@ -14,7 +14,7 @@
           <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="/products/">Cards</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="/form/">
+          <a class="block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli" href="#">
             <i class="icon i-32"><svg><use xlink:href="/images/icons.svg#basket"></use></svg></i>
           </a>
         </li>
