Fix search bar button

--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -9,22 +9,21 @@
         <li><a href="#">Contact</a></li>
 
         <div class="search-container">
-          <form class="search-form">
+          <form class="search-form flex-row">
             <input type="text" name="search">
-            <button class="milli" type="submit">search</button>
+            <button class="milli" type="submit">Search</button>
           </form>
         </div>
+
       </ul>
     </nav>
   </div>
 
-
-
   <div class="breadcrumb-div unit xs-1">
     <ul class="breadcrumb push-0 island-1-4 text-center">
-      <li><a href="#" class="micro">Home</a></li>
-      <li><a href="#" class="micro">Products</a></li>
-      <li><a href="#" class="micro">Griffins</a></li>
+      <li><a href="#" class="micro">Home /</a></li>
+      <li><a href="#" class="micro">Products /</a></li>
+      <li><a href="#" class="micro">Griffins /</a></li>
       <li class="micro">European Griffins</li>
     </ul>
   </div>
@@ -32,7 +31,8 @@
   <div class="unit xs-1">
     <div class="title grid gutter-2 pad-b">
       <img class="inline-block unit xs-1 s-1 m-1-4 l-1-4 xl-1-4" src="/images/logo.svg" alt="">
-      <h1 class="unit xs-2-4 push-0 inline-block island-1-2 text-center gutter-2">Mythological Creature Market</h1>
+      <h1 class="unit xs-1 s-1 m-3-4 l-3-4 xl-3-4 push-0 inline-block island-1-2 text-center gutter-2">Mythological Creature Market</h1>
     </div>
   </div>
+
 </div>
