Add description to layout

--- a/_patterns/navigation/banner.html
+++ b/_patterns/navigation/banner.html
@@ -3,7 +3,7 @@
     <div class="masthead grid grid-middle line push-0">
       <div class="left unit xs-1-2 s-1-2 m-1-2 l-1-2">
         <div>
-          <a class="logo" href="index.html">
+          <a class="logo" href="/">
             <img src="/images/logo.svg" alt="#" aria-details="logo">
           </a>
         </div>
@@ -11,8 +11,8 @@
       <div class="nav unit xs-1-2 s-1-2 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <nav class="right" role="navigation" id="nav" tabindex="0">
           <ul class="list-group-inline mega push-0">
-            <li><a class="ib gutter-1-4 bold" href="index.html"><span>Home</span></a></li>
-            <li><a class="ib gutter-1-4 bold" href="product.html"><span>Shop</span></a></li>
+            <li><a class="ib gutter-1-4 bold" href="/"><span>Home</span></a></li>
+            <li><a class="ib gutter-1-4 bold" href="/products/"><span>Shop</span></a></li>
             <li><a class="ib gutter-1-4 bold" href=""><span>About</span></a></li>
             <li><a class="ib gutter-1-4 bold" href=""><span>Join Us</span></a></li>
             <li><a class="island-1-2" href="index.html">
