--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,7 +1,7 @@
 <section class="dots banner-content vertical-align">
       <div class="text-center island-2">
-        <h2 class="statement push-0 yotta bold">Make it Original. Make it Yours.</h2>
-        <p>Locally made handcrafted original art</p>
+        <h2 class="statement push-0 yotta bold">Make it Original. Make it Yours.>{{include.heading}}</h2>
+        <p>Locally made handcrafted original art<{{include.text}}</p>
         <div>
           <a href="" class="btn">Shop</a>
         </div>
