Add javascript folder download

--- a/_patterns/navigation/banner.html
+++ b/_patterns/navigation/banner.html
@@ -1,6 +1,6 @@
 <section>
   <div>
-    <div class="masthead grid grid-middle line push-0">
+    <div class="island-1-2 masthead grid grid-middle line push-0">
       <div class="left unit xs-1-2 s-1-2 m-1-2 l-1-2">
         <div>
           <a class="logo" href="/">
