--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,6 +1,6 @@
 <div class="card pad-t-1">
   <img class="img-flex" src="/images/hoodie-black.png" alt="">
   <h3 class="island-1-2 push-0">Black Wonderland Hoodie</h3>
-  <p>$69.99</p>
+  <p class="price">$69.99</p>
   <div class="blackbg">{% pattern buttons/seemore %}</div>
 </div>
