--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -2,7 +2,7 @@
   <div class="grid wrapper gutter-1-2">
     <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 wrapper pad-t-1-2">
       <h4 class="push-0 left text">Events</h4>
-      <small class="unit push-0 micro right text pad-t-1">There are no events currently posted.</small>
+      <a href="#"><small class="event unit push-0 micro right text pad-t-1">Axel Gonzalez live at the Ricoh Coliseum. <datetime>March 29th, 2019.</datetime></small></a>
     </div>
   </div>
   <div class="wrapper-1-2 island gutter-1-2 text-center">
