--- a/_patterns/sections/sections.html
+++ b/_patterns/sections/sections.html
@@ -1,25 +1,34 @@
-<div class="left gutter-2 pad-t-2">
-  <figure role="grid group">
-    <img alt="" class="unit xs-1 s-1 m-1-2 l-1-2 img-flex push-0" src="/images/hoodie-black.png" aria-details="black-hoodie">
-
-<div class="unit xs-1 s-1 m-1 l-1">
-  <h3 class="push-0 pad-b-2">Black Wonderland Hoodie</h3>
-    <div class="unit xs-1-2 s-1-2 m-1-4 l-1-4 push-0 right">
-      <h6 class="island-1-2 push-0">$69.99</h6>
-    </div>
-  </div>
-
-  <div class="unit xs-1 s-1 m-1 l-1">
-    <p class="push-0"><strong>Fabric</strong></p>
-      <div class="unit xs-1-2 s-1-2 m-1-4 l-1-4 push-0">
-        <ul class="list-group">
-          <li><p class="milli push-0">Bamboo</p></li>
-          <li><p class="milli push-0">Cotton</p></li>
-          <li><p class="milli push-0">Silk</p></li>
-        </ul>
-      </div>
-    </div>
-      {% pattern forms/quantity %}
-      {% pattern buttons/addtocart %}
+<div class="grid left gutter-2 pad-t-2">
+  <figure role="unit xs-1 s-1 m-1-2 l-1-2 group">
+    <img alt="" class="img-flex push-0" src="/images/hoodie-black.png" aria-details="black-hoodie">
   </figure>
+
+<div class="unit xs-1 s-1 m-1-2 l-1-2 left gutter-2 pad-t-2">
+<h3 class="push-0 pad-b-1-2">Black Wonderland Hoodie</h3>
 </div>
+<table class="unit xs-1 s-1 m-1-2 l-1-2 left gutter-2 pad-t-2">
+    <thead>
+      <tr>
+        <th scope="col">Fabric</th>
+        <th class="right" scope="col">$69.99</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td colspan="3">Bamboo</td>
+      </tr>
+      <tr>
+        <td colspan="3">Cotton</td>
+      </tr>
+      <tr>
+        <td colspan="3">Silk</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th>{% pattern forms/quantity %}</th>
+        <td>{% pattern buttons/addtocart %}</td>
+      </tr>
+    </tfoot>
+  </table>
+  </div>
