Remove underlines from section

--- a/_patterns/sections/sections.html
+++ b/_patterns/sections/sections.html
@@ -1,6 +1,6 @@
 <div class="grid left gutter-2 pad-t-2">
-  <figure role="unit xs-1 s-1 m-1-2 l-1-2 group">
-    <img alt="" class="img-flex push-0" src="/images/hoodie-black.png" aria-details="black-hoodie">
+  <figure role="group">
+    <img alt="" class="unit xs-1 s-1 m-1-2 l-1-2 img-flex push-0" src="/images/hoodie-black.png" aria-details="black-hoodie">
   </figure>
 
 <div class="unit xs-1 s-1 m-1-2 l-1-2 left gutter-2 pad-t-2">
@@ -10,7 +10,7 @@
     <thead>
       <tr>
         <th scope="col">Fabric</th>
-        <th class="right" scope="col">$69.99</th>
+        <th class="section-price right" scope="col">$69.99</th>
       </tr>
     </thead>
     <tbody>
@@ -25,10 +25,8 @@
       </tr>
     </tbody>
     <tfoot>
-      <tr>
         <th>{% pattern forms/quantity %}</th>
         <td>{% pattern buttons/addtocart %}</td>
-      </tr>
     </tfoot>
   </table>
   </div>
