--- a/_patterns/forms/fieldset.html
+++ b/_patterns/forms/fieldset.html
@@ -65,7 +65,7 @@
 
       <div class="push-1-2 unit xs-1 gutter-1-4">
         <input id="offers" type="checkbox">
-        <label for="offers" class="check milli">Keep me up to date with promotions and content via email!</label>
+        <label for="offers" class="check milli">Keep up to date with promos and content via email!</label>
       </div>
 
       <div class="unit xs-1 gutter-1-4">
