--- a/_patterns/navigations/page-nav.html
+++ b/_patterns/navigations/page-nav.html
@@ -1,6 +1,6 @@
 <nav class="max-length text-center">
   <ul class="page-nav list-group-inline">
-    <li class="gutter-1-2">
+    <li class="island-1-2">
       <a href="#">
         <i class="icon i-48">
           <svg>
@@ -9,22 +9,22 @@
         </i>
       </a>
     </li>
-    <li class="gutter-1-2">
-      <a class="hover" href="#" class="active">1</a>
+    <li>
+      <a class="hover island-1-2 block" href="#" class="active">1</a>
     </li>
-    <li class="gutter-1-2">
-      <a class="hover" href="#">2</a>
+    <li>
+      <a class="hover island-1-2 block" href="#">2</a>
     </li>
-    <li class="gutter-1-2">
-      <a class="hover" href="#">3</a>
+    <li>
+      <a class="hover island-1-2 block" href="#">3</a>
     </li>
-    <li class="gutter-1-2">
-      <a class="hover" href="#">4</a>
+    <li>
+      <a class="hover island-1-2 block" href="#">4</a>
     </li>
-    <li class="gutter-1-2">
-      <a class="hover" href="#">5</a>
+    <li>
+      <a class="hover island-1-2 block" href="#">5</a>
     </li>
-    <li class="gutter-1-2">
+    <li class="island-1-2">
       <a href="#">
         <i class="icon i-48">
           <svg>
