--- a/_patterns/banners/hero-banner.html
+++ b/_patterns/banners/hero-banner.html
@@ -4,7 +4,7 @@
   </div>
   <div class="hb-content text-left island unit xs-1 s-1">
     <div class="wrapper">
-      <h2 class="push-1-2 banner-title text-upper max-length">Your space adventure<br>starts here</h2>
+      <h2 class="push-1-2 banner-title text-upper max-length text-center">Your space adventure<br>starts here</h2>
       {% pattern forms/search %}
     </div>
   </div>
