--- a/_patterns/navigations/social-nav.html
+++ b/_patterns/navigations/social-nav.html
@@ -5,7 +5,7 @@
         <i class="icon i-48">
           <svg><use xlink:href="/images/icons.svg#facebook" /></svg>
         </i>
-        <p class="ib milli push-0"> Facebook</p>
+        <span class="milli push-0 icon-label"> Facebook</span>
       </a>
     </li>
     <li class="unit xs-1-2 s-1-2 m-1-4 l-1-4 text-left">
@@ -13,7 +13,7 @@
         <i class="icon i-48">
           <svg><use xlink:href="/images/icons.svg#instagram" /></svg>
         </i>
-        <p class="ib milli push-0"> Instagram</p>
+        <span class="milli push-0 icon-label"> Instagram</span>
       </a>
     </li>
     <li class="unit xs-1-2 s-1-2 m-1-4 l-1-4 text-left">
@@ -21,7 +21,7 @@
         <i class="icon i-48">
           <svg><use xlink:href="/images/icons.svg#pinterest" /></svg>
         </i>
-        <p class="ib milli push-0"> Youtube</p>
+        <span class="milli push-0 icon-label"> Youtube</span>
       </a>
     </li>
     <li class="unit xs-1-2 s-1-2 m-1-4 l-1-4 text-left">
@@ -29,7 +29,7 @@
         <i class="icon i-48">
           <svg><use xlink:href="/images/icons.svg#twitter" /></svg>
         </i>
-        <p class="ib milli push-0"> Twitter</p>
+        <span class="milli push-0 icon-label"> Twitter</span>
       </a>
     </li>
   </ul
