Add the footer and header patterns to the ecommerce website

--- a/_patterns/navigations/social-nav.html
+++ b/_patterns/navigations/social-nav.html
@@ -1,36 +1,32 @@
 <nav class="max-length text-center">
   <ul class="list-group social-nav grid">
-    <li class="unit xs-1-2 s-1-2 m-1-4 l-1-4 text-left">
+    <li class="unit xs-1-2 s-1-4 m-1-4 l-1-4 gutter-1-2 push-1-2">
       <a class="block" href="https://www.facebook.com">
         <i class="icon i-48">
           <svg><use xlink:href="/images/icons.svg#facebook" /></svg>
         </i>
-        <span class="milli push-0 icon-label"> Facebook</span>
       </a>
     </li>
-    <li class="unit xs-1-2 s-1-2 m-1-4 l-1-4 text-left">
+    <li class="unit xs-1-2 s-1-4 m-1-4 l-1-4 gutter-1-2 push-1-2">
       <a class="block" href="https://www.instagram.com">
         <i class="icon i-48">
           <svg><use xlink:href="/images/icons.svg#instagram" /></svg>
         </i>
-        <span class="milli push-0 icon-label"> Instagram</span>
       </a>
     </li>
-    <li class="unit xs-1-2 s-1-2 m-1-4 l-1-4 text-left">
+    <li class="unit xs-1-2 s-1-4 m-1-4 l-1-4 gutter-1-2 push-1-2">
       <a class="block" href="https://www.youtube.com">
         <i class="icon i-48">
           <svg><use xlink:href="/images/icons.svg#pinterest" /></svg>
         </i>
-        <span class="milli push-0 icon-label"> Youtube</span>
       </a>
     </li>
-    <li class="unit xs-1-2 s-1-2 m-1-4 l-1-4 text-left">
+    <li class="unit xs-1-2 s-1-4 m-1-4 l-1-4 gutter-1-2 push-1-2">
       <a class="block" href="https://www.twitter.com">
         <i class="icon i-48">
           <svg><use xlink:href="/images/icons.svg#twitter" /></svg>
         </i>
-        <span class="milli push-0 icon-label"> Twitter</span>
       </a>
     </li>
-  </ul
+  </ul>
 </nav>
