Add text to banner config

--- a/_patterns/banner/homepagebanner.html
+++ b/_patterns/banner/homepagebanner.html
@@ -4,7 +4,7 @@
     {% pattern photos/homepage-banner %}
   </div>
 
-  <div class="banner-content pin-lc zindex-2">
+  <div class="banner-content pin-lc zindex-2 gutter">
     <h1 class="banner-title exa push-1-2">{{include.heading}}</h1>
     <p class="banner-info mega italic max-length-no-center">{{include.text}}</p>
     {% pattern buttons/basic %}
